syntax = "proto3";

package main;
option go_package = "github.com/davidae/proto-benchmark-value-vs-pointers;main";

message MessageOptional {
  optional string name = 1;
  optional int64 birthDay = 2;
  optional string phone = 3;
  optional int32 siblings = 4;
  optional bool spouse = 5;
  optional double money = 6;
  optional TypeOptional type = 7;
  oneof values {
    string value_s = 8;
    int32 value_i = 9;
    double value_d = 10;
  }
  optional AddressOptional Address = 11;
}

enum TypeOptional {
  TYPEOptional_UNSPECIFIED = 0;
  TYPEOptional_R = 1;
  TYPEOptional_S = 2;
}

message AddressOptional {
  optional string street = 1;
  optional int32 number = 2;
  optional int32 post_code = 3;
  optional int32 floor = 4;
  optional RandomOptional random = 5;
}

message RandomOptional {
  optional string FieldA = 1;
  optional string FieldB = 2;
  optional string FieldC = 3;
  optional string FieldD = 4;
  optional string FieldE = 5;
  optional string FieldF = 6;
  optional string FieldG = 7;
  optional string FieldH = 8;
  optional string FieldI = 9;
  optional string FieldJ = 10;
  optional int64 FieldK = 11;
  optional int64 FieldL = 12;
  optional int64 FieldM = 13;
  optional int64 FieldN = 14;
  optional string FieldO = 15;
  optional string FieldP = 16;
  optional int32 FieldQ = 17;
  optional string FieldR = 18;
  optional string FieldS = 19;
  optional string FieldT = 20;
  optional int32 FieldU = 21;
  optional int32 FieldV = 22;
  optional int32 FieldW = 23;
  optional int32 FieldX = 24;
  optional string FieldY = 25;
  optional bool FieldZ = 26;
  optional NestedRandomOptional nested_random = 34;
}

message NestedRandomOptional {
  optional string FieldA = 1;
  optional string FieldB = 2;
  optional string FieldC = 3;
  optional string FieldD = 4;
  optional string FieldE = 5;
  optional string FieldF = 6;
  optional double FieldG = 7;
  optional double FieldH = 8;
  optional double FieldI = 9;
  optional double FieldJ = 10;
  optional double FieldK = 11;
  optional double FieldL = 12;
  optional string FieldM = 13;
  optional string FieldN = 14;
  optional string FieldO = 15;
  optional string FieldP = 16;
  optional int64 FieldQ = 17;
  optional int64 FieldR = 18;
  optional int64 FieldS = 19;
  optional int64 FieldT = 20;
  optional string FieldU = 21;
  optional string FieldV = 22;
  optional string FieldW = 23;
  optional string FieldX = 24;
  optional bool FieldY = 25;
  optional bool FieldZ = 26;
}
