syntax = "proto3";

package main;
option go_package = "github.com/davidae/proto-benchmark-value-vs-pointers;main";

message MessageValue {
  string name = 1;
  int64 birthDay = 2;
  string phone = 3;
  int32 siblings = 4;
  bool spouse = 5;
  double money = 6;
  TypeValue type = 7;
  oneof values {
    string value_s = 8;
    int32 value_i = 9;
    double value_d = 10;
  }
  AddressValue Address = 11;
}

enum TypeValue {
  TYPEValue_UNSPECIFIED = 0;
  TYPEValue_R = 1;
  TYPEValue_S = 2;
}

message AddressValue {
  string street = 1;
  int32 number = 2;
  int32 post_code = 3;
  int32 floor = 4;
  RandomValue random = 5;
}

message RandomValue {
  string FieldA = 1;
  string FieldB = 2;
  string FieldC = 3;
  string FieldD = 4;
  string FieldE = 5;
  string FieldF = 6;
  string FieldG = 7;
  string FieldH = 8;
  string FieldI = 9;
  string FieldJ = 10;
  int64 FieldK = 11;
  int64 FieldL = 12;
  int64 FieldM = 13;
  int64 FieldN = 14;
  string FieldO = 15;
  string FieldP = 16;
  int32 FieldQ = 17;
  string FieldR = 18;
  string FieldS = 19;
  string FieldT = 20;
  int32 FieldU = 21;
  int32 FieldV = 22;
  int32 FieldW = 23;
  int32 FieldX = 24;
  string FieldY = 25;
  bool FieldZ = 26;
  NestedRandomValue nested_random = 34;
}

message NestedRandomValue {
  string FieldA = 1;
  string FieldB = 2;
  string FieldC = 3;
  string FieldD = 4;
  string FieldE = 5;
  string FieldF = 6;
  double FieldG = 7;
  double FieldH = 8;
  double FieldI = 9;
  double FieldJ = 10;
  double FieldK = 11;
  double FieldL = 12;
  string FieldM = 13;
  string FieldN = 14;
  string FieldO = 15;
  string FieldP = 16;
  int64 FieldQ = 17;
  int64 FieldR = 18;
  int64 FieldS = 19;
  int64 FieldT = 20;
  string FieldU = 21;
  string FieldV = 22;
  string FieldW = 23;
  string FieldX = 24;
  bool FieldY = 25;
  bool FieldZ = 26;
}